# mbot_darknet_ros_py

./: CMakeLists.txt  README.md  package.xml  setup.py
common/setup/: setup.sh
msg/: RecognizedObject.msg  RecognizedObjectArray.msg  RecognizedObjectArrayStamped.msg  SyncLocalizerWithDetectron.msg
ros/binaries/darknet_gpu/: .gitignore  Makefile
ros/binaries/darknet_gpu/cfg/: yolov3-erl4-gripper.cfg  yolov3-erl4-mbot.cfg  yolov3-lis_v1-mbot.cfg  yolov3-mad-mbot.cfg  yolov3-pouff-mbot.cfg  yolov3.cfg
ros/binaries/darknet_gpu/data/: erl4.data  erl4.names  lis_v1.data  lis_v1.names  mad.data  mad.names  pouff.data  pouff.names
ros/binaries/darknet_no_gpu/: Makefile
ros/binaries/weights/: README.md
ros/config/: default.yaml
ros/config/BACKUP/: handle.yaml  known_objects.yaml  open_challenge.yaml  parallel_1.yaml  parallel_2.yaml  people_detection.yaml
ros/config/erl/: erl_gripper.yaml  erl_known_head.yaml  erl_known_head_erl5.yaml  erl_pouff.yaml
ros/launch/: darknet_ros_py.launch
ros/launch/BACKUP/: darknet_ros_py_handle.launch  darknet_ros_py_known_objects.launch  open_challenge.launch  people_classification.launch  people_following.launch
ros/scripts/: darknet_ros_py_node  mcr_object_list_republisher_node  pose_array_to_pose_node
ros/src/darknet_ros/: darknet.py  darknet_ros_class.py  mcr_object_list_republisher.py  pose_array_to_pose.py
